--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   padding-top: 12px;
   padding-bottom: 12px;
   padding-right: 12px;
-align-content: flex-start
+ align-content: flex-start;
 }
 
 .CalculatorInputs label, button {
@@ -22,6 +22,16 @@ align-content: flex-start
   padding-right: 12px;
   padding-left: 12px;
   font-size: 15px;
+  align-content: space-around
+}
+
+.CalculatorInputs form {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-right: 12px;
+  padding-left: 12px;
+  font-size: 15px;
+  padding: 15px;
   align-content: space-around
 }
 
@@ -62,8 +72,4 @@ align-content: flex-start
   text-align: left;
   background-color: #4CAF50;
   color: white;
-}
-
-.CalculatorOutput button {
-  
 }
